# hadeeth-rag

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  start_backend.bat  start_frontend.bat
backend/: config.py  groq_client.py  main.py
backend/api/: chat.py  ingest.py  pdf_serve.py  sources.py
backend/ingestion/: chunker.py  json_parser.py  pdf_parser.py  pipeline.py
backend/models/: schemas.py  source_registry.py
backend/rag/: embedder.py  prompt_builder.py  retriever.py  vectorstore.py
data/: sources.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: chat.ts  sources.ts
frontend/src/components/chat/: ChatInput.tsx  ChatWindow.tsx  CitationChip.tsx  MessageBubble.tsx
frontend/src/components/pdf/: PdfModal.tsx
frontend/src/components/settings/: SettingsPage.tsx
frontend/src/components/sidebar/: Sidebar.tsx
frontend/src/store/: appStore.ts
frontend/src/types/: index.ts
