[project]
name = "hadeeth-rag"
version = "0.1.0"
description = "Local Islamic text RAG chat app"
authors = [
    {name = "zubairtusar",email = "zubairtusar17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "pymupdf>=1.24.10",
    "sentence-transformers>=3.1.1",
    "transformers>=4.44.2",
    "chromadb>=0.5.15",
    "groq>=0.9.0",
    "httpx>=0.27.2",
    "sse-starlette>=2.1.3",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
